Fix some spacing errors and duplicated code

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -90,11 +90,8 @@
   width: 100%;
   height: 100vh;
   background-color: var(--primary-color);
-  transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
-}
-
-.navbar-menu {
   transform: translateX(-100%);
+  transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .navbar-menu.active {
